lang/tests/contract/common/ui/fail/34-invalid-interface-name-1.rs
use liquid_lang as liquid;

#[liquid::interface(name = "r#fn")]
mod foo {
    extern "liquid" {
        fn bar();
    }
}

fn main() {}